tests/ui/privacy/pub-priv-dep/pub-priv1.stderr
error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:30:5
   |
LL |     pub field: OtherType,
   |     ^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/pub-priv1.rs:9:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:37:5
   |
LL |     pub fn pub_fn_param(param: OtherType) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:40:5
   |
LL |     pub fn pub_fn_return() -> OtherType { OtherType }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:47:5
   |
LL |     type Foo: OtherTrait;
   |     ^^^^^^^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:51:1
   |
LL | pub trait WithSuperTrait: OtherTrait {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:60:5
   |
LL |     type X = OtherType;
   |     ^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:64:1
   |
LL | pub fn in_bounds<T: OtherTrait>(x: T) { unimplemented!() }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:67:1
   |
LL | pub fn private_in_generic() -> std::num::Saturating<OtherType> { unimplemented!() }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:70:1
   |
LL | pub static STATIC: OtherType = OtherType;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:73:1
   |
LL | pub const CONST: OtherType = OtherType;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:76:1
   |
LL | pub type Alias = OtherType;
   | ^^^^^^^^^^^^^^

error: trait `OtherTrait` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:81:1
   |
LL | impl OtherTrait for PublicWithPrivateImpl {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `OtherType` from private dependency 'priv_dep' in public interface
  --> $DIR/pub-priv1.rs:86:1
   |
LL | impl PubTraitOnPrivate for OtherType {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 13 previous errors

